src/test/resources/fails/two_graph_outputs.sil
//More than one output graphs are not possible
field next:Node
method test(g0: Graph, g1: Graph) returns  (g: Graph, gg: Graph)
{
assert true
}